# DigitalImageProcessing

./: README.md
lab_1/: CMakeLists.txt  Gauss.cpp  Gauss.h  main.cpp
lab_2/: Bredly.cpp  Bredly.h  CMakeLists.txt  Otsy.cpp  Otsy.h  main.cpp
lab_3/: CMakeLists.txt  Morfology.cpp  Morfology.h  main.cpp
lab_4/: CMakeLists.txt  Canny.cpp  Canny.h  Laplacian_of_Gaussian.cpp  Laplacian_of_Gaussian.h  Laplas.cpp  Laplas.h  Sobel.cpp  Sobel.h  main.cpp
lab_5/: CMakeLists.txt  FFD.cpp  FFD.h  Harris.cpp  Harris.h  Moravec.cpp  Moravec.h  main.cpp
lab_6/: CMakeLists.txt  SIFT.cpp  SIFT.h  main.cpp
